syntax = "proto2";

import "Vector2f.proto";

package proto;

message WorldBall {
    required Vector2f pos = 1;
    optional float z = 2;
    required Vector2f vel = 3;
    optional float z_vel = 4;
    required bool visible = 5;
}
